--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./utils/mixins";
 @import "./base/general";
 @import "./composants/composants";
+@import "./layout/modalcontact";
 @import "./layout/lightbox";
 @import "./layout/header";
 @import "./layout/footer";
