--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,4 @@
+// HEADER de la Homepage
 header {
     display: flex;
     flex-direction: row;
@@ -9,4 +10,10 @@ header {
 .logo {
     height: 50px;
     margin-left: 100px;
+}
+
+
+// HEADER la page Photographer
+.informations__place {
+    display: flex;
 }
