--- a/scss/pages/_photographe.scss
+++ b/scss/pages/_photographe.scss
@@ -18,7 +18,7 @@
 .informations {
     h1 {
         color: $saumon;
-        font-size: 64px;
+        font-size: 50px;
         font-style: normal;
         font-weight: normal;
         margin: 0 0 20px 0;
@@ -31,6 +31,25 @@
         text-align: left;
         margin-top: 20px;
     }
+}
+
+// ZONE DU TRIE(Dropdown)
+.photograph-media__input {
+    margin: 20px 0;
+}
+.trie-text {
+    font-size: 1.3em;
+    font-weight: 700;
+    margin-right: 20px;
+}
+
+#trie {
+    border: none;
+    padding: 6px 10px;
+    border-radius: 5px;
+    background-color: $brown;
+    color: white;
+    font-weight: 500;
 }
 
 
@@ -83,72 +102,6 @@
 
 .information-likes {
     display: flex;
-}
-
-
-
-
-///////////// MODALE  /////////////
-#contact_modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, .9);
-}
-
-.no-scroll {
-    overflow: hidden;
- }
-
-
-.modal {
-    margin: 2% auto;
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 35%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-}
-
-.modal header {
-    justify-content: space-between;
-    width: 100%;
-    h2 {
-        margin-bottom: 30px;
-        font-weight: normal;
-        text-align: left;
-        color: black;
-    }
-    img {
-        cursor: pointer;
-        height: 30px;
-        width: 30px;
-    }
-}
-
-#myForm {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    label {
-        color: #312E2E;
-        font-size: 20px;
-    }
-    input {
-        width: 100%;
-        height: 50px;
-        border: none;
-        border-radius: 5px;
-    }
 }
 
 
