--- a/scss/pages/_photographe.scss
+++ b/scss/pages/_photographe.scss
@@ -70,7 +70,7 @@
     }
 }
 
-.media_photo__image img, .media_photo__video video {
+.medias_photographer img, video {
     width: 350px;
     height: 300px;
     border-radius: 5px;
