--- a/scss/style.css
+++ b/scss/style.css
@@ -200,34 +200,27 @@ svg {
 }
 
 .lightbox-open {
+  display: none;
   position: fixed;
   top: 0px;
   left: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   background-color: white;
   z-index: 1;
+  height: 100%;
   width: 100%;
 }
 
 .lightbox-container {
   position: relative;
-  display: -ms-inline-grid;
-  display: inline-grid;
-  -ms-grid-columns: 40px minmax(130px, calc(100% - 100px)) 40px;
-      grid-template-columns: 40px minmax(130px, calc(100% - 100px)) 40px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 130px minmax(130px, calc(100% - 100px)) 130px;
+      grid-template-columns: 130px minmax(130px, calc(100% - 100px)) 130px;
   -ms-grid-rows: (auto)[2];
       grid-template-rows: repeat(2, auto);
   grid-column-gap: 10px;
-  grid-row-gap: 5px;
-  max-width: 95%;
+  grid-row-gap: 20px;
+  margin-top: 3%;
 }
 
 .lightbox-container__media {
@@ -247,8 +240,8 @@ svg {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-area: 1/2/2/3;
-  width: 100%;
-  max-height: calc(100vh - 80px);
+  width: 70%;
+  max-height: calc(100vh - 100px);
   border-radius: 5px;
 }
 
@@ -473,7 +466,7 @@ header {
   margin-top: 30px;
 }
 
-.media_photo__image img, .media_photo__video video {
+.medias_photographer img, video {
   width: 350px;
   height: 300px;
   border-radius: 5px;
