--- a/scss/style.css
+++ b/scss/style.css
@@ -542,5 +542,9 @@ header {
   height: 15px;
 }
 
+.none {
+  display: none;
+}
+
 /*@import url("photographer.css");*/
 /*# sourceMappingURL=style.css.map */
