--- a/scss/style.css
+++ b/scss/style.css
@@ -433,13 +433,18 @@ header {
   margin-right: 20px;
 }
 
-#trie {
+select {
+  font-size: 1em;
+  font-weight: 500;
   border: none;
   padding: 6px 10px;
   border-radius: 5px;
-  background-color: #901C1C;
+  background: #901C1C;
   color: white;
-  font-weight: 500;
+}
+
+.select-option {
+  background: #DB8876;
 }
 
 #main, .photograph-media {
