--- a/scss/style.css
+++ b/scss/style.css
@@ -443,10 +443,10 @@ select {
   color: white;
 }
 
-/*
 .select-option {
-    background: #DB8876;
-}*/
+  background: #DB8876;
+}
+
 #main, .photograph-media {
   display: -webkit-box;
   display: -ms-flexbox;
