ajout fonction pricePerDay

--- a/scss/composants/_composants.scss
+++ b/scss/composants/_composants.scss
@@ -1,6 +1,10 @@
 // LES BOUTONS
 .open-modal-button, .contact_button {
     @include btn;
+    &:hover {
+        color: black;
+        background-color: $saumon;
+    }
 }
 
 svg {
