--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -13,7 +13,7 @@
     width: 170px;
     height: 70px;
     border: none;
-    background-color: #901C1C;
+    background-color: $brown;
     border-radius: 5px;
     cursor: pointer;
 }
