modification grid lightbox

--- a/scss/layout/_lightbox.scss
+++ b/scss/layout/_lightbox.scss
@@ -12,7 +12,8 @@
 .lightbox-container {
     position: relative;
     display: grid;
-    grid-template-columns: 130px minmax(130px, calc(100% - 100px)) 130px;
+    //grid-template-columns: 130px minmax(130px, calc(100% - 100px)) 130px;
+    grid-template-columns: 50%, 50%;
     grid-template-rows: repeat(2, auto);
     grid-column-gap: 10px;
     grid-row-gap: 20px;
@@ -27,9 +28,12 @@
     object-fit: cover;
     grid-area: 1/2/2/3;
     width: 70%;
-    //max-height: calc(100vh - 100px);
     max-height: calc(100vh - 100px);
     border-radius: 5px;
+}
+
+.video-lightbox {
+    height: 100%;
 }
 
 // Les flèches précédent et suivant
@@ -43,8 +47,13 @@
     grid-area: 1/3/3/4;
 }
 
+
 .title {
     grid-area: 2/2/3/3;
+}
+
+.lightbox-title {
+    color: $brown;
 }
 
 // Bouton "Close lightbox"
@@ -53,7 +62,7 @@
     background-color: transparent;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 5%;
     min-width: 40px;
     min-height: 40px;
     cursor: pointer;
